src/objects/PIR_Resolution_Partner__c.object
<CustomObject>
    <description>It is used to store Resolution Partner information related to PIR (FAST/PIP) cases.</description>
    <fields>
        <fullName>Case_Item_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Item Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Item</label>
        <referenceTo>Case_Item__c</referenceTo>
        <relationshipLabel>PIR Resolution Partners</relationshipLabel>
        <relationshipName>PIR_Resolution_Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Resolution_Partner_Number__c</fullName>
        <description>Case Resolution Partner Number</description>
        <displayFormat>CRPN-{000000}</displayFormat>
        <label>Case Resolution Partner Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will hold Case record - #US2853220</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>PIR Resolution Partners</relationshipLabel>
        <relationshipName>PIR_Resolution_Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Store the comments of RP</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Days_Past_SLA__c</fullName>
        <description>To display the days its behind/ahead of the SLA.</description>
        <formula>FLOOR(TODAY() - SLA_Due_Date__c)</formula>
        <label>Days Past SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Escalation_Notes__c</fullName>
        <description>This field will hold Escalation Notes - #US2853220</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Escalation Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <formula>Case_Item__r.ExternalID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIR_Resolution_Partner_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id,
Name,
&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PIR Resolution Partner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Reference_Number__c</fullName>
        <description>Store the reference number for this resolution partner.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Partner Reference Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Matrix_Proactive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>look up to Provider Matrix record</description>
        <label>Internal Business Partner</label>
        <referenceTo>Provider_Matrix__c</referenceTo>
        <relationshipLabel>PIR Proactive RP</relationshipLabel>
        <relationshipName>PIR_Proactive_RP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provider_Matrix_Reactive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>look up to Provider Matrix record</description>
        <label>Resolution Partners Name</label>
        <referenceTo>Provider_Matrix__c</referenceTo>
        <relationshipLabel>PIR Reactive RP</relationshipLabel>
        <relationshipName>PIR_Resolution_Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Partner_Outcome__c</fullName>
        <description>#US2853220
Indicate whether the issue has been resolved by the resolution partner, or is still unresolved and must be sent back.</description>
        <label>Resolution Partner Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incorrect Route</fullName>
                </value>
                <value>
                    <fullName>Must Resend</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLA_Completion_Date__c</fullName>
        <description>#US2853220
Date when they resolve this resolution partner</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SLA Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLA_Due_Date__c</fullName>
        <description>SLA Due Date of the Resolution Partner.</description>
        <formula>SLA_Routed_Date__c+Provider_Matrix_Reactive__r.Resolution_Partner_SLA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLA_Indicator__c</fullName>
        <description>Indicate icon based on SLA

Yellow icon = Open SLA
Green icon = Completed SLA
Red icon = SLA needs attention</description>
        <formula>IF(
(!ISBLANK( SLA_Completion_Date__c ) &amp;&amp; SLA_Completion_Date__c &lt; SLA_Due_Date__c &amp;&amp;  TEXT(Resolution_Partner_Outcome__c ) != &apos;Open&apos; ),
IMAGE(&quot;/img/msg_icons/confirm32.png&quot;, &quot;Status Indicator&quot;, 30, 30),
IF((SLA_Due_Date__c &gt; (TODAY()) &amp;&amp; TEXT(Resolution_Partner_Outcome__c ) == &apos;Open&apos;),
IMAGE(&quot;/img/msg_icons/warning32.png&quot;, &quot;Status Indicator&quot;, 30, 30),
IMAGE(&quot;/img/msg_icons/error32.png&quot;, &quot;Status Indicator&quot;, 30, 30)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yellow icon = Open SLA
Green icon = Completed SLA
Red icon = SLA needs attention</inlineHelpText>
        <label>SLA Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Routed_Date__c</fullName>
        <description>#US2853220
Date when they route it to the resolution partner</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SLA Routed Date</label>
        <type>Date</type>
    </fields>
    <label>PIR Resolution Partner</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case_Item__c</columns>
        <columns>External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PRP-{000000000}</displayFormat>
        <label>PIR Resolution Partner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PIR Resolution Partners</pluralLabel>
    <recordTypes>
        <fullName>Proactive_Action_Partner</fullName>
        <active>true</active>
        <label>Proactive Action Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reactive_Resolution_Partners</fullName>
        <active>true</active>
        <label>Reactive Resolution Partners</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prevent_RP_Creation_while_case_is_closed</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
 OR(ISNEW(), ISCLONE() ),
 TEXT( Case__r.Status ) == &apos;Closed&apos;
)</errorConditionFormula>
        <errorMessage>RP record cannot be created/cloned in closed case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_RP_Edit_while_case_is_closed</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
 NOT(ISCHANGED( Case__c ))  ,
 TEXT( Case__r.Status ) == &apos;Closed&apos;
)</errorConditionFormula>
        <errorMessage>RP record cannot be edited  in closed case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Proactive_RP_Creation_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
 ISNEW(),RecordType.DeveloperName =&apos;Proactive_Action_Partner&apos;,
 ISBLANK( Provider_Matrix_Proactive__c ) 
)</errorConditionFormula>
        <errorDisplayField>Provider_Matrix_Proactive__c</errorDisplayField>
        <errorMessage>Please provide mandatory field: Internal Business Partner</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reactive_RP_Creation_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
 ISNEW(),RecordType.DeveloperName =&apos;Reactive_Resolution_Partners&apos;,
 OR(
ISBLANK( Provider_Matrix_Reactive__c),
 ISBLANK(SLA_Routed_Date__c),
 ISBLANK(TEXT( Resolution_Partner_Outcome__c ))
)
)</errorConditionFormula>
        <errorMessage>Please provide mandatory field: Resolution Partners Name / Resolution Partner Outcome/ SLA Routed Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SLA_Completion_Date_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
RecordType.DeveloperName = &quot;Reactive_Resolution_Partners&quot;,
ISPICKVAL( Resolution_Partner_Outcome__c , &apos;Resolved&apos;),
OR(
ISBLANK( SLA_Completion_Date__c ),ISBLANK(SLA_Routed_Date__c)
)
)</errorConditionFormula>
        <errorMessage>SLA Completion Date &amp; SLA Routed Date should not be blank when closing RP.</errorMessage>
    </validationRules>
</CustomObject>